update user module
